- Made this mod not replace items added to the starting inventory by other mods
- Updated description to include MrPlagues Authentic Races non-compat
- Added proper exiting on invalid IL edit
- Cleanup