@@ -1,4 +1,4 @@
 displayName = New Beginnings
 author = Team Spirit
-version = 1.0.0.6
+version = 1.0.0.7
 homepage = discord.gg/uBNnznSfur
